# mcp-server-browser-use-ollama

./: .gitignore  LICENSE  README.md  client.py  llms-sdk.txt  mcp-server.json  pyproject.toml  pytest.ini  requirements.txt  server.py
.context/: .contextignore  index.md
.context/diagrams/: system-flow.md
.context/docs/: architecture.md
.github/workflows/: tests.yml
docs/: CLAUDE.md  complex_tasks.md  testing.md
src/: client.py  client_backup.py  server.202508021148.py  server.py
tests/: conftest.py  run_tests.py  test_integration.py  test_server.py  test_server_mcp.py
