[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "mcp-server-browser-use-ollama"
version = "0.1.0"
description = "Browser automation and control system built on the Model Context Protocol (MCP)"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mcp", "browser-automation", "ollama", "playwright", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.4.0",
    "playwright>=1.41.0",
    "langchain-ollama>=0.3.0",
    "langchain-core>=0.3.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Cam10001110101/mcp-server-browser-use-ollama"
Repository = "https://github.com/Cam10001110101/mcp-server-browser-use-ollama"
Issues = "https://github.com/Cam10001110101/mcp-server-browser-use-ollama/issues"

[project.scripts]
mcp-browser-server = "src.server:main"
mcp-browser-client = "src.client:main"
mcp-browser-enhanced = "src.enhanced_client:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
]
